抽取CipherUtils和RsaSignatureUtils公共方法；文件目录分类